mypay.deploy/base/mypay4-fe/mypay4-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypay4-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sample-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/app-root: /mypay4/cittadino/home
spec:
  #tls:
  #- hosts:
  #  - mypay4._BASE_URL_
  #  secretName: star-cert
  rules:
  - host: mypay4._BASE_URL_
    http:
      paths:
      - path: /mypay4/cittadino
        pathType: Prefix
        backend:
          service:
            name: mypay4-frontend-cittadino-service
            port:
              number: 8080
      - path: /mypay4/apicittadino
        pathType: Prefix
        backend:
          service:
            name: mypay4-backend-cittadino-service
            port:
              number: 8081
      - path: /mypay4/operatore
        pathType: Prefix
        backend:
          service:
            name: mypay4-frontend-operatore-service
            port:
              number: 8080
      - path: /mypay4/apioperatore
        pathType: Prefix
        backend:
          service:
            name: mypay4-backend-operatore-service
            port:
              number: 8081
